0.9.g
Separate header files for each compilers / ports. Makes porting ooc much easier.
Multithreading support.
Threadsafe ooc core, Vector, List and Signal.

0.9.f
Implementation of managed pointers was not ANSI-C compliant. :-(
Reworked, now it is in line with ANSI-C, and can be compiled with VC++ as well.
(And should be able to be compiled with many compilers ...)

0.9.e
Bugfix with nested managed pointers (unique name for each Manageables).
To prevent possible name conflicts with other include files, templates are modified (adding ooc/ prefix).
New test for managed pointers.


0.9.d
It is allowed to throw an Exception in a catch() block.
Adding ooc_manage_object() method
Improved performance in ooc core (use of managed pointers instead of try...catch)
Modified ooc_cast(), ooc_check_cast();
Multi-target automake: libooc.a for release and libooc_d.a for debug version.
Improve API docs.

0.9.c
Adding ooc_isClassOf() type checking.
Bug fix in ooc_finalize().
Simplification of the copy constructor return values.
Adding typed Vector.
Adding typed List.
Addind List of ListNode objects.
Test suites: Vector, Signal
More docs: Vector
Restructured Exception handling, easier use of exceptions
More templates for the ooc tool.
Adding ooc_manage() and ooc_pass() mechanism.


0.9.b
Adding type safe cast, ooc_cast functionality.
Adding ooc_use and ooc_release functionality.
